# flo

./: Cargo.toml  MAP_MVP.md  PRODUCT.md  SPEC.md  USAGE.md  build.rs
inspiration/: MINFLOW_CONCEPTS.md  frame-understanding.md  intend-understanding.md  nowify-understanding.md  timers-understanding.md
migrations/: 001_init.sql  002_samples.sql  003_defer_review.sql  004_esm_linking_inbox_focus.sql
reference/claudewire/: PROTOCOL.md
reference/claudewire/claudewire/: schema.py  transport.py
src/: lib.rs  logging.rs  main.rs
src/cli/: mod.rs
src/client/: mod.rs
src/db/: mod.rs
src/models/: mod.rs
src/server/: mod.rs  routes.rs
src/tui/: mod.rs
tests/: api_tests.rs  common.rs  db_tests.rs
