[package]
name = "flo"
version = "0.1.0"
edition = "2021"

[dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }

# web server
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# cli
clap = { version = "4", features = ["derive"] }

# http client (for CLI/TUI talking to server)
reqwest = { version = "0.12", features = ["json"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ids
ulid = { version = "1", features = ["serde"] }

# tui (feature-gated for later)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# utilities
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
urlencoding = "2"
dirs = "6"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
hyper = "1"
http-body-util = "0.1"
serde_json = "1"

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm"]
